--- a/main.html
+++ b/main.html
@@ -7,6 +7,19 @@
 </head>
 
 <body>
+	<h1>My Shopping List</h1>
+  <ol>
+    <li data-ns-test="shoppingList">New Laptop</li>
+    <li data-ns-test="shoppingList">Smartphone</li>
+    <li data-ns-test="shoppingList">Designer Watch</li>
+  </ol>
+
+  <h1>My Holiday Destinations</h1>
+  <ul>
+    <li data-ns-test="holidayList">Maldives</li>
+    <li data-ns-test="holidayList">Japan</li>
+    <li data-ns-test="holidayList">Greece</li>
+  </ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
